--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -14,6 +14,7 @@
 <div id="chat-box">
   <div id="chat-log">
     <div style="padding:4px"></div>
+    <div class="chat-wrapper"><div class="chat-bubble">안녕! 나는 챗다야. 오늘 하루 중 가장 기억에 남는 일은 뭐야?</div><div class="chat-box"></div></div>
   </div>
 
   <div id="chat-form-wrapper">
@@ -25,9 +26,7 @@
 </div>
 
 <div style="float:left; margin:20px">
-  <button id="response">get response</button>
-  <button id="temp">temp</button>
-
+  <button id="end-chat-btn">대화를 마치고 일기 작성하기</button>
 </div>
 </body>
 
