--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-<h2>ChatDa</h2>
 
 <div id="chat-box">
   <div id="chat-log">
@@ -25,8 +24,10 @@
   </div>
 </div>
 
-<div style="float:left; margin:20px">
+<div id="debug-box">
   <button id="end-chat-btn">대화를 마치고 일기 작성하기</button>
+  <button id="enable-wait-btn">enable wait</button>
+  <button id="disable-wait-btn">disable wait</button>
 </div>
 </body>
 
