ui change, add some animation

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -31,6 +31,9 @@
 </div>
 </body>
 
+<script src="js/config.js" defer></script>
+<script src="../static/js/config.js" defer></script>
+
 <script src="js/chat.js" defer></script>
 <script src="../static/js/chat.js" defer></script>
 
