--- a/src/main/resources/templates/diary.html
+++ b/src/main/resources/templates/diary.html
@@ -8,6 +8,9 @@
 <div id="diary">
 
 </div>
+<script src="js/config.js" defer></script>
+<script src="../static/js/config.js" defer></script>
+
 <script src="js/diary.js" defer></script>
 </body>
 </html>
