--- a/src/main/resources/templates/temp.html
+++ b/src/main/resources/templates/temp.html
@@ -80,6 +80,10 @@
         </div>
         <button onclick="saveDiary()">저장</button>
     </div>
+
+    <script src="js/config.js" defer></script>
+    <script src="../static/js/config.js" defer></script>
+
     <script src="js/temp.js" defer></script>
     <script src="../static/js/temp.js" defer></script>
 </body>
