--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,26 +2,41 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="../static/css/home.css">
+
+    <link rel="stylesheet" href="/css/animation.css">
+    <link rel="stylesheet" href="../static/css/animation.css">
     <title>chatDa</title>
 </head>
 
 <body>
-<div class="container">
-    <div>
-        <h1>ChatDa Demo</h1>
+    <div id="container" class="container">
+        <h1>Chat Da</h1>
         <p>챗다와 대화를 나누어 오늘의 일기를 작성할 수 있습니다.</p>
         <p>이름을 입력하고 대화를 시작해 보세요!</p>
+        <div class="form-group">
         <form id="start-chat-form" onsubmit="return false;">
-            <label>이름 : </label>
+            <label>이름</label>
             <input id="name-input" type="text" maxlength="10">
             <button >대화 시작</button>
         </form>
     </div>
+        <a href="/calendar" class="google-btn">Diary</a>
+        <a href="#" class="google-btn">
+            <img src="../static/img/google_logo.png" alt="Google Logo">
+            Sign in with Google
+        </a>
+    </div>
+    </div>
 
-    <a href="/calendar">Diary</a>
+    <div id="animation" >ANIMATION</div>
 </div> <!-- /container -->
 
 </body>
+
+<script src="js/config.js" defer></script>
+<script src="../static/js/config.js" defer></script>
 
 <script src="js/home.js" defer></script>
 <script src="../static/js/home.js" defer></script>
