[feat] add delete button and function

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -27,6 +27,9 @@
 <div style="float:left; margin:20px">
   <button id="end-chat-btn">대화를 마치고 일기 작성하기</button>
 </div>
+<div style="float:left; margin:20px">
+  <button id="delete-btn" onclick="delete_today_data()">오늘 채팅과 일기 삭제하기</button>
+</div>
 </body>
 
 <script src="js/chat.js" defer></script>
