--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@
     </div>
         <a href="/calendar" class="google-btn">Diary</a>
         <a href="#" class="google-btn">
-            <img src="../static/img/google_logo.png" alt="Google Logo">
+            <img src="img/google_logo.png" alt="Google Logo">
             Sign in with Google
         </a>
     </div>
