--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,43 +2,56 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="../static/css/home.css">
+    <link rel="stylesheet" type="text/css" href="/css/home.css">
+    <link rel="stylesheet" type="text/css" href="/css/animation.css">
 
-    <link rel="stylesheet" href="/css/animation.css">
-    <link rel="stylesheet" href="../static/css/animation.css">
     <title>chatDa</title>
 </head>
 
 <body>
     <div id="container" class="container">
         <h1>Chat Da</h1>
-        <p>챗다와 대화를 나누어 오늘의 일기를 작성할 수 있습니다.</p>
-        <p>이름을 입력하고 대화를 시작해 보세요!</p>
-        <div class="form-group">
-        <form id="start-chat-form" onsubmit="return false;">
-            <label>이름</label>
-            <input id="name-input" type="text" maxlength="10">
-            <button >대화 시작</button>
-        </form>
-    </div>
-        <a href="/calendar" class="google-btn">Diary</a>
-        <a href="#" class="google-btn">
-            <img src="../static/img/google_logo.png" alt="Google Logo">
-            Sign in with Google
-        </a>
-    </div>
-    </div>
+        
+        <div id="usercheck-container">
+            <div id="login-div" class="form-group">
+                <form id="login-form" onsubmit="return false;">
+                    <label>아이디</label>
+                    <input id="login-username-input" type="text" maxlength="10">
+                    <label>비밀번호</label>
+                    <input id="login-password-input" type="text" maxlength="10">
+                    <button>로그인</button>
+                </form>
+            </div>
+            <div id="signup-div" class="form-group">
+                <form id="signup-form" onsubmit="return false;">
+                    <label>이름</label>
+                    <input id="signup-name-input" type="text" maxlength="10">
+                    <label>아이디</label>
+                    <input id="signup-username-input" type="text" maxlength="10">
+                    <label>비밀번호</label>
+                    <input id="signup-password-input" type="text" maxlength="10">
+                    <label>비밀번호 확인</label>
+                    <input id="signup-passwordcheck-input" type="text" maxlength="10">
+                    <button >계정 생성</button>
+                </form>
+            </div>
+        </div>
 
-    <div id="animation" >ANIMATION</div>
-</div> <!-- /container -->
-
+        <div id="button-container">
+            <button class="google-btn">대화</button>
+            <button class="google-btn">일기장</button>
+            <button class="google-btn">문체</button>
+        </div>
+    </div>
+    <div id="temp-btns">
+        <button class="temp-btn" id="show-login">show login</button>
+        <button class="temp-btn" id="show-signup">show signup</button>
+        <button class="temp-btn" id="animation" >ANIMATION</button>    
+    </div>
+    </div> <!-- /container -->
 </body>
 
 <script src="js/config.js" defer></script>
-<script src="../static/js/config.js" defer></script>
-
 <script src="js/home.js" defer></script>
-<script src="../static/js/home.js" defer></script>
 
 </html>
