member diary complete, merge page contoller

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -8,14 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
           integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <style>
-        #diary {
-            display: none; /* 초기에는 숨겨진 상태로 설정합니다. */
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-top: 10px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/calendar.css">
 </head>
 <body>
 <div class="container-fluid">
@@ -102,6 +95,8 @@
     <p id="content"></p>
 </div>
 <!--<button name="jump" onclick="jump()">Go</button>-->
+
+<script src="js/config.js" defer></script>
 <script src="js/calendar.js" defer></script>
 
 <!-- Optional JavaScript for bootstrap -->
