--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
                     <input id="login-username-input" type="text" maxlength="10">
                     <label>비밀번호</label>
                     <input id="login-password-input" type="text" maxlength="10">
-                    <button>로그인</button>
+                    <button id="login-btn">로그인</button>
                 </form>
             </div>
             <div id="signup-div" class="form-group">
@@ -39,7 +39,7 @@
 
         <div id="button-container">
             <button class="google-btn">대화</button>
-            <button class="google-btn">일기장</button>
+            <button id="diary-btn" class="google-btn">일기장</button>
             <button class="google-btn">문체</button>
         </div>
     </div>
