add navbar (home, logout)

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -32,9 +32,7 @@
 </body>
 
 <script src="js/config.js" defer></script>
-<script src="../static/js/config.js" defer></script>
-
 <script src="js/chat.js" defer></script>
-<script src="../static/js/chat.js" defer></script>
+<script src="js/navbar.js" defer></script>
 
 </html>
