--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/css/home.css">
     <link rel="stylesheet" type="text/css" href="/css/animation.css">
+    <link rel="stylesheet" type="text/css" href="/css/navbar.css">
 
     <title>chatDa</title>
 </head>
@@ -49,9 +50,11 @@
         <button class="temp-btn" id="animation" >ANIMATION</button>    
     </div>
     </div> <!-- /container -->
+
 </body>
 
 <script src="js/config.js" defer></script>
 <script src="js/home.js" defer></script>
+<script src="js/navbar.js" defer></script>
 
 </html>
