--- a/src/main/resources/templates/temp.html
+++ b/src/main/resources/templates/temp.html
@@ -65,6 +65,7 @@
             background-color: #0056b3;
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="/css/navbar.css">
 </head>
 <body>
     <div class="container">
@@ -82,9 +83,7 @@
     </div>
 
     <script src="js/config.js" defer></script>
-    <script src="../static/js/config.js" defer></script>
-
     <script src="js/temp.js" defer></script>
-    <script src="../static/js/temp.js" defer></script>
+    <script src="js/navbar.js" defer></script>
 </body>
 </html>
