--- a/src/main/resources/templates/diary.html
+++ b/src/main/resources/templates/diary.html
@@ -9,8 +9,7 @@
 
 </div>
 <script src="js/config.js" defer></script>
-<script src="../static/js/config.js" defer></script>
-
 <script src="js/diary.js" defer></script>
+<script src="js/navbar.js" defer></script>
 </body>
 </html>
