[feat] add autorize to talk, end chat and PENGUIN

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div id="button-container">
-                <button class="google-btn">대화</button>
+                <button id="chat-btn" class="google-btn">대화</button>
                 <button id="diary-btn" class="google-btn">일기장</button>
                 <button class="google-btn">문체</button>
             </div>
