[feat] modify diary, hide password input, animation smoothing

--- a/src/main/resources/templates/temp.html
+++ b/src/main/resources/templates/temp.html
@@ -20,7 +20,7 @@
             <label for="content">내용</label>
             <textarea id="content" placeholder="오늘 하루는 어땠나요?"></textarea>
         </div>
-        <button onclick="saveDiary()">저장</button>
+        <button id="save-btn">저장</button>
     </div>
 
     <script src="js/config.js" defer></script>
