--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -44,7 +44,7 @@ label {
     margin-top :10px;
     font-weight: bold;
 }
-input[type="text"], textarea {
+input[type="text"], input[type="password"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
