--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
                         <label>아이디</label>
                         <input id="login-username-input" type="text" maxlength="10">
                         <label>비밀번호</label>
-                        <input id="login-password-input" type="text" maxlength="10">
+                        <input id="login-password-input" type="password" maxlength="10">
                         <button id="login-btn">로그인</button>
                     </form>
                 </div>
@@ -30,9 +30,9 @@
                         <label>아이디</label>
                         <input id="signup-username-input" type="text" maxlength="10">
                         <label>비밀번호</label>
-                        <input id="signup-password-input" type="text" maxlength="10">
+                        <input id="signup-password-input" type="password" maxlength="10">
                         <label>비밀번호 확인</label>
-                        <input id="signup-passwordcheck-input" type="text" maxlength="10">
+                        <input id="signup-passwordcheck-input" type="password" maxlength="10">
                         <button id="signup-btn">계정 생성</button>
                     </form>
                 </div>
