--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -31,6 +31,7 @@ body {
     width: 100%;
     max-width: 600px;
 }
+
 h1 {
     text-align: center;
     margin-bottom: 20px;
@@ -39,11 +40,13 @@ h1 {
 .form-group {
     margin-bottom: 20px;
 }
+
 label {
     display: block;
     margin-top :10px;
     font-weight: bold;
 }
+
 input[type="text"], input[type="password"] {
     width: 100%;
     padding: 10px;
@@ -51,12 +54,19 @@ input[type="text"], input[type="password"] {
     border-radius: 4px;
     box-sizing: border-box;
 }
+
 textarea {
     height: 200px;
     resize: none;
 }
+
+#button-container {
+    display : flex;
+    justify-content: space-between;
+}
+
 button {
-    width: 100%;
+    width: 170px;
     padding: 10px;
     border: none;
     border-radius: 4px;
@@ -65,21 +75,37 @@ button {
     font-size: 16px;
     cursor: pointer;
 }
+
 button:hover {
     background-color: #0056b3;
 }
 
-#button-container {
-    display : flex;
+#alert-div {
+    position: relative
+}
+
+.alert-badge {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #login-btn {
     margin-top: 20px;
 }
+
 #signup-btn {
     margin-top: 20px;
 }
-
 
 .google-btn {
     display: inline-flex;
