--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,9 +38,12 @@
                 </div>
             </div>
             <div id="button-container">
-                <button id="chat-btn" class="google-btn">대화</button>
-                <button id="diary-btn" class="google-btn">일기장</button>
-                <button class="google-btn">문체</button>
+                <div><button id="chat-btn" class="google-btn">대화</button></div>
+                <div><button id="diary-btn" class="google-btn">일기장</button></div>
+                <div id="alert-div">
+                    <button id="writing-style-btn" class="google-btn">글쓰기 스타일</button>
+                    <span class="alert-badge">!</span>
+                </div>
             </div>
         </div>
         <div id="temp-btns">
