--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -33,6 +33,7 @@
         </div>
     </body>
     <script src="js/config.js" defer></script>
+    <script src="js/embedding.js" defer></script>
     <script src="js/chat.js" defer></script>
     <script src="js/navbar.js" defer></script>
 </html>
