[feat] delete today diary/talk log button

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -24,6 +24,7 @@
         </div>
         <div id="debug-box">
             <button id="end-chat-btn">대화를 마치고 일기 작성하기</button>
+            <button id="delete-diary-btn">delete today chat/diary log</button>
             <button id="enable-wait-btn">enable wait</button>
             <button id="disable-wait-btn">disable wait</button>
         </div>
