[feat] apply create style api, add button disabled style, smooth login

--- a/src/main/resources/static/css/writing-style.css
+++ b/src/main/resources/static/css/writing-style.css
@@ -56,3 +56,10 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+button:disabled {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: default;
+    opacity: 0.65;
+}
