--- a/src/main/resources/templates/writing-style.html
+++ b/src/main/resources/templates/writing-style.html
@@ -16,13 +16,13 @@
                 <p>일기 작성에 반영하여 내가 쓴 것 같은 일기를 만들어드려요.</p>
                 <p>주제는 "새" 입니다.</p>
                 <form>
-                    <textarea></textarea>
-                    <button>제출</button>
+                    <textarea id="short-writing"></textarea>
+                    <button id="create-style-btn">제출</button>
                 </form>
             </div>
             <div id="check-div" class="form-group">
-                <p>당신의 글쓰기 스타일은</p>
-                <div></div>
+                <p>나의 글쓰기 스타일은</p>
+                <div id="writing-style-content"></div>
             </div>
         </div>
     </div>
