--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -80,6 +80,13 @@ button:hover {
     background-color: #0056b3;
 }
 
+button:disabled {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: default;
+    opacity: 0.65;
+}
+
 #alert-div {
     position: relative
 }
