[feat] style load api apply

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,7 +42,7 @@
                 <div><button id="diary-btn" class="google-btn">일기장</button></div>
                 <div id="alert-div">
                     <button id="writing-style-btn" class="google-btn">글쓰기 스타일</button>
-                    <span class="alert-badge">!</span>
+                    <span id="alert-badge" class="alert-badge">!</span>
                 </div>
             </div>
         </div>
