--- a/src/main/resources/templates/writing-style.html
+++ b/src/main/resources/templates/writing-style.html
@@ -8,7 +8,7 @@
         <title>chatDa</title>
     </head>
     <body>
-        <button id="temp-btn">switch temp</button>
+
         <div id="container" class="container">
             <h1>글쓰기 스타일</h1>
             <div id="create-div" class="form-group">
@@ -21,7 +21,10 @@
                 </form>
             </div>
             <div id="check-div" class="form-group">
-                <p>나의 글쓰기 스타일은</p>
+                <div id="upper">
+                    <p>나의 글쓰기 스타일은</p>
+                    <button id="toggle-btn">🗑️다시하기</button>
+                </div>
                 <div id="writing-style-content"></div>
             </div>
         </div>
