--- a/src/main/resources/static/css/writing-style.css
+++ b/src/main/resources/static/css/writing-style.css
@@ -1,10 +1,3 @@
-#temp-btn {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 160px;
-}
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -62,4 +55,17 @@ button:disabled {
     color: #666666;
     cursor: default;
     opacity: 0.65;
+}
+
+#upper {
+    display: flex;
+    justify-content: space-between;
+}
+
+#toggle-btn {
+    width : 100px;
+    color : black;
+    background-color: #fff;
+    padding : 4px;
+    text-decoration : underline;
 }
