[feat] coloring, natural exit

--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -1,3 +1,13 @@
+select {
+    min-width: 80px;
+}
+
+.upper {
+    background-color: #00000008;
+    display: flex;
+    justify-content: space-between;
+}
+
 td,th {
     width: 55px;
     height: 55px;
