--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -139,7 +139,7 @@ button:disabled {
     position: absolute;
     top: 20px;
     left: 20px;
-    display :flex;
+    display :none;
     flex-direction: column;
 }
 
