--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div id="chat-box">
+            <button id="end-chat-btn"><img id="exit-img" src="img/exit.png"></button>
             <div id="chat-log">
                 <div style="padding:4px"></div>
                 <div class="chat-wrapper">
@@ -18,12 +19,11 @@
             <div id="chat-form-wrapper">
                 <form id="chat-form" onsubmit="return false;">
                     <input id="chat-input" type="text">
-                    <button id="chat-btn">send</button>
+                    <button id="chat-btn">보내기</button>
                 </form>
             </div>
         </div>
         <div id="debug-box">
-            <button id="end-chat-btn">대화를 마치고 일기 작성하기</button>
             <button id="delete-diary-btn">delete today chat/diary log</button>
             <button id="enable-wait-btn">enable wait</button>
             <button id="disable-wait-btn">disable wait</button>
