--- a/src/main/resources/templates/temp.html
+++ b/src/main/resources/templates/temp.html
@@ -12,6 +12,10 @@
     <div id="container" class="container">
         <h1>오늘의 일기</h1>
         <div class="date" id="currentDate"></div>
+        <div id="choose-div">
+            <button id="btn-1" class="toggle-btn">1</button>
+            <button id="btn-2" class="toggle-btn">2</button>
+        </div>
         <div class="form-group">
             <label for="title">제목</label>
             <input type="text" id="title" placeholder="일기 제목을 입력하세요">
